# interactive-json-tree

./: README.md  example.ipynb  mkdocs.yml  pyproject.toml
.github/: docs.yml
docs/: index.md  reference.md
src/interactive_json_tree/: __init__.py
